crates/ferrotype/tests/compile_fail/rpc_tuple_pattern_param.rs
//! Test that rpc_method fails when first parameter is a tuple pattern

use ferrotype::rpc_method;

struct Service;

impl Service {
    #[rpc_method]
    fn method((a, b): (i32, i32), request: String) -> String {
        format!("{} {} {}", a, b, request)
    }
}

fn main() {}
